kubernetes/cloud/go-time-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: time-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: time
  template:
    metadata:
      labels:
        app: time
    spec:
      containers:
        - image: dubovikov/go-time:latest
          name: go-time
          ports:
          - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "15m"
