kubernetes/cloud/go-time-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: time-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: time-service
      port:
        number: 8080
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: time-service
            port:
              number: 8080
